--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <textarea id="notes" placeholder="Märkused (nt erisoovid)" class="mt-3 w-full rounded-lg border border-amber-200 bg-white px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-amber-300" rows="3"></textarea>
 
         <div id="err" class="hidden mt-3 rounded-lg border border-red-200 bg-red-50 p-3 text-sm text-red-700"></div>
-        <div id="ok" class="hidden mt-3 rounded-lg border border-emerald-200 bg-emerald-50 p-3 text-sm text-emerald-700">Tellimus vastu võetud! Kinnitame e-posti/telefoniga. 🙌</div>
+        <div id="ok" class="hidden mt-3 rounded-lg border border-emerald-200 bg-emerald-50 p-3 text-sm text-emerald-700">Tellimus vastu võetud! 🙌</div>
 
         <div class="mt-4 flex flex-col md:flex-row items-start md:items-center justify-between gap-3">
           <div class="text-sm text-zinc-700">
